# discosearch-rs

./: Cargo.toml  README.md
src/: client.rs
