[package]
name = "discosearch-rs"
version = "0.1.1"
edition = "2021"
description = "Rust client for discosearch engine"
license = "MIT"
repository = "https://github.com/DiscoSearch/discosearch-rs"
readme = "README.md"
keywords = ["vector-search", "web-client"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
serde = "1.0.148"
serde_json = "1.0.89"
